SERVER-99523 Do not restoreState() when catch temporary unavailable exception from storage (#31343)

GitOrigin-RevId: 19649c4bdeb58f97842110394f33dd6ca8713691